mise en place de la partie bdd utilisateur

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,6 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}hello world !{% endblock %}
     </body>
 </html>
