--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -38,6 +38,23 @@ ul.menu li a{
     text-decoration: none;
     color: rgb(100, 88, 88);
 }
+/* footer */
+footer {
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 81px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+footer p {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.94px;
+    text-align: right;
+    color: #333333;
+    padding-right: 100px;
+}
 /* page d'accueil */
 
 /* panneau de bienvenue */
