--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
                         <li><a href="{{ path('app_home') }}">Nos produits</a></li>
                         <li><a href="">Mon panier</a></li>
                         <li><a href="">Mon compte</a></li>
-                        <li><a href="">Déconnexion</a></li>
+                        <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
                     </ul>
                 </div>    
             </header>   
