--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -32,7 +32,7 @@
                     <div class="product-infos">
                         <h3>{{ product.name }}</h3>
                         <p>{{ product.shortDescription }}</p>
-                        <p>{{ product.price }}</p>
+                        <p>{{ product.price }} €</p>
                         <a href="{{ path('app_product_show', {'id': product.id}) }}">Voir le produit</a>
                     </div>
                 </div>
