--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -20,7 +20,7 @@
                 </div>
                 <button type="submit" class="btn">S'inscrire</button>
             {{ form_end(registrationForm) }}
-            <a href="{{ path('app_home') }}">Vous avez déjà un compte ? Se connecter</a>
+            <a href="{{ path('app_login') }}">Vous avez déjà un compte ? Se connecter</a>
         </div>
     </div>
 
