--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -348,6 +348,7 @@ footer p {
     background-color: #FFFDF7;
     border:#666666 solid 1px;
     margin-bottom: 30px;
+    font-size: 16px;
 }
 .agree-field {
     width: 80%;
