--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,12 +10,16 @@
             <form method="post">
                 {% if error %}
                     <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    <br>
                 {% endif %}
 
                 {% if app.user %}
                     <div class="mb-3">
-                        Vous êtes conecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
+                        Vous êtes conecté en tant que {{ app.user.userIdentifier }}
+                        <br>
+                        <a href="{{ path('app_logout') }}">Déconnexion</a>
                     </div>
+                    <br>
                 {% endif %}
                 <label for="username">Adresse email</label>
                 <input class="field" type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
@@ -25,17 +29,6 @@
                 <input type="hidden" name="_csrf_token"
                     value="{{ csrf_token('authenticate') }}"
                 >
-
-                {#
-                    Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                    See https://symfony.com/doc/current/security/remember_me.html
-
-                    <div class="checkbox mb-3">
-                        <input type="checkbox" name="_remember_me" id="_remember_me">
-                        <label for="_remember_me">Remember me</label>
-                    </div>
-                #}
-
                 <button class="btn btn-lg btn-primary" type="submit">
                     Se connecter
                 </button>
