--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
                     <ul class="menu">
                         <li><a href="{{ path('app_home') }}">Nos produits</a></li>
                         <li><a href="">Mon panier</a></li>
-                        <li><a href="">Mon compte</a></li>
+                        <li><a href="{{ path('app_my_account') }}">Mon compte</a></li>
                         <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
                     </ul>
                 </div>    
