--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,6 +3,12 @@
 {% block title %}Green Goodies : Nos produits{% endblock %}
 
 {% block body %}
+{#  messages flash #}
+    {% for message in app.flashes('danger') %}
+        <div class="flash-notice">
+            {{ message }}
+        </div>
+    {% endfor %}
     <div class="container">
         <div class="welcome-message">
             <div class="left-panel">
