--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -429,3 +429,8 @@ footer p {
 .orders-table tr:hover {
     background-color: #CCCCCC;
 }
+.no-bills {
+    font-size: 12px;
+    font-weight: 400;
+    font-style: italic;
+}
