--- a/templates/my_account/index.html.twig
+++ b/templates/my_account/index.html.twig
@@ -3,33 +3,36 @@
 {% block title %}Mon compte{% endblock %}
 
 {% block body %}
-
+{% for basket in baskets %}
+    {{basket.id}}
+{% endfor %}
 <div class="container-my-account">
     <h1>Mon compte</h1>
     <div class="previous-orders my-account">
         <h2>Mes précédentes commandes</h2>
         <div class="previousOrders-list">
             {% if orders is empty %}
-                <p>Vous n'avez pas encore de commandes</p>
+                <p class="no-bills">Vous n'avez pas encore de commandes</p>
+            {% else %}
+                <table class="orders-table">
+                    <thead>
+                        <tr>
+                            <th>N°</th>
+                            <th>Date</th>
+                            <th>Prix</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for order in orders %}
+                        <tr>
+                            <td>{{ order.uniqueNumber }}</td>
+                            <td>{{ order.date|date('d/m/Y') }}</td>
+                            <td>{{ order.price }} €</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
             {% endif %}
-            <table class="orders-table">
-                <thead>
-                    <tr>
-                        <th>N°</th>
-                        <th>Date</th>
-                        <th>Prix</th>
-                    </tr>
-                </thead>
-                <tbody>
-                {% for order in orders %}
-                    <tr>
-                        <td>{{ order.id }}</td>
-                        <td>{{ order.date|date('d/m/YYYY') }}</td>
-                        <td>{{ order.price }} €</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
         </div>
     </div>
     <div class="api-access my-account">
