mise en place de la validation de commande et factorisation du code

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,13 +3,17 @@
 {% block title %}Green Goodies : Nos produits{% endblock %}
 
 {% block body %}
-{#  messages flash #}
+    {#  messages flash #}
     {% for message in app.flashes('danger') %}
         <div class="flash-notice">
             {{ message }}
         </div>
     {% endfor %}
-    
+    {% for message in app.flashes('ok') %}
+        <div class="flash-notice-ok">
+            {{ message }}
+        </div>
+    {% endfor %}
     <div class="container">
         <div class="welcome-message">
             <div class="left-panel">
