--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -57,10 +57,15 @@ footer p {
 /* page d'accueil */
 /* message flash */
 .flash-notice {
-    background-color: #FFFDF7;
+    background-color: rgb(253, 101, 101);
     width: 100%;
     height: auto;
-    color :red
+    color : black;
+}
+.flash-notice-ok {
+    width: 100%;
+    background-color: #89d69d;
+    color: #000000;
 }
 /* panneau de bienvenue */
 .welcome-message {
@@ -533,7 +538,6 @@ footer p {
     text-align: left;
     color :#333333;
     margin-bottom: 3px;
-    background-color: #red;
 }
 .total span {
     font-size: 20px;
