--- a/templates/my_account/index.html.twig
+++ b/templates/my_account/index.html.twig
@@ -22,9 +22,9 @@
                     <tbody>
                     {% for order in orders %}
                         <tr>
-                            <td>{{ order.uniqueNumber }}</td>
-                            <td>{{ order.date|date('d/m/Y') }}</td>
-                            <td>{{ order.price }} €</td>
+                            <td>{{ order[0].uniqueNumber }}</td>
+                            <td>{{ order[0].date|date('d/m/Y') }}</td>
+                            <td>{{ order[0].price | format_currency('EUR', {fraction_digit:2},  locale='fr')}}</td>
                         </tr>
                     {% endfor %}
                     </tbody>
