--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Green Goodies{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"> 
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>🟢</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>Gg</text></svg>"> 
         <link rel="stylesheet" href="{{ asset('styles/app.css') }}"/>
         {% block stylesheets %}{% endblock %}
         {% block javascripts %}
@@ -12,19 +12,21 @@
     </head>
     <body>
             <header>
-                <div class="row1">
+                <nav>
                     <a href="{{ path('app_home') }}">
                         <img src="{{ asset('img/Logo.png') }}" alt="Green Goodies" class="logo">
                     </a>
-                </div>
-                <div class="row2">
                     <ul class="menu">
                         <li><a href="{{ path('app_home') }}">Nos produits</a></li>
                         <li><a href="{{ path('app_basket') }}">Mon panier</a></li>
                         <li><a href="{{ path('app_my_account') }}">Mon compte</a></li>
-                        <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
+                        {% if app.user %}
+                            <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
+                        {% else %}
+                            <li><a href="{{ path('app_login') }}">Connexion</a></li>
+                        {% endif %}
                     </ul>
-                </div>    
+                </nav>   
             </header>   
         {% block body %}{% endblock %}
         <footer>
